css/main.css
/* ... */
.red-border-button:hover {
    color: #aaa;
}

/* END PRICING PAGE */
/* RESOURCES PAGE */
.resource {
    display: none;
}

#resources-header {
    text-align: left;
    margin-bottom: 70px;
    padding-top: 50px;
}

#resources-zone {
    border-top: 1px solid #ccc;
    padding-top: 50px;
    padding-bottom: 60px;
}

.resource-tile {
    margin: 20px 0 30px;
}

.resource-image-block img {
    width: 100%;
}

.resource-sublinks-inner a {
    display: inline-block;
    color: #999;
    border: 1px solid #fff;
    font-size: 20px;
    text-decoration: none;
    transition: all .35s ease-out;
    padding: 5px 25px;
    border-radius: 25px;
    margin: 20px 15px;
}

.resource-sublinks-inner a.active {
    border: 1px solid #222;
    color: #000;
}

.resource-sublinks-inner a:hover {
    color: #444;
}

.resource-download .fa-icon {
    font-size: 28px;
    transition: all .35s ease-out;
    color: #999;
}

.resource-download .fa-icon:hover {
    color: #444;
}

.resource-info .author {
    float: left;
    text-align: left;
    display: block;
    width: 47%;
    padding: 5px 1.5%;
}

.resource-info .publish-date {
    float: left;
    text-align: right;
    width: 47%;
    display: block;
    padding: 5px 1.5%;
}

.resource-title {
    font-weight: 700;
    color: #666;
    padding: 5px 1.5%;
    border-bottom: 2px solid #ccc;
}

.resource-type {
    font-family: neosans;
    font-size: 16px;
    color: #aaa;
    margin-top: 8px;
}

.resource-download {
    position: relative;
    top: 2px;
}

/* RESOURCES PAGE */

/* COMPANY PAGE */
#about-us {
    background: url(../img/team_working.jpg) no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

#company-page {
    margin-top: 70px;
    margin-bottom: 240px;
}

#company-header {
    margin-top: 120px;
}

#mission-zone {
    padding-top: 10px;
    padding-bottom: 20px;
}

#our-vision-container {
    padding-top: 33px !important;
}

#culture-container {
    padding-top: 33px !important;
}

.member-data-zone {
    text-align: center;
    margin-top: 45px;
    margin-bottom: 20px;
    display: inline-block;
    width: 22%;
    padding: 0 1.5%;
    margin-left: 12px;
    vertical-align: middle;
}

.member-pic-zone>img {
    width: 157px;
    height: 157px;
    background-color: #fff;
    border-radius: 80px;
    margin-bottom: 20px;
    overflow: hidden;
}

.logo-pic-zone>img {
    max-width: 180px;
    background-color: #fff;
    margin-bottom: 20px;
    overflow: hidden;
    vertical-align: top;
}

.social-icons {
    list-style: none;
    overflow: hidden;
    display: inline-block;
}

.member-title {
    font-size: 1em;
    color: #999;
    margin-bottom: 6px;
}

.social-icons li {
    display: inline-block;
    margin-right: 8px;
    font-size: 20px;
}

.social-icons li > a {
    color: #999;
}

/* END OF COMPANY PAGE */


/* START OF KNOW MORE PAGE */

.ast-container {
  padding-top: 130px
}

#sast-zone {
  padding-top: 140px;
  margin-top: -140px;
}

#dast-zone, #mast-zone {
  display: none;
  padding-top: 140px;
  margin-top: -140px;
}

.ast-question {
  font-size: 20px;
  font-family: neosans;
  color: #f05b27
}

.ast-sub-question {
  font-size: 20px;
  font-family: gillsansmtpro;
  color: #000000
}

.ast-answer {
  margin-top: 10px;
  font-size: 17px;
  font-family: gillsansmtpro;
  color: #595959
}

.ast-answer-images {
  padding-top: 30px;
  padding-bottom: 120px;
}

.align-center img {
  display: block!important;
  margin-left: auto!important;
  margin-right: auto!important;
}

.alt-image-tag {
  padding-top: 30px;
  padding-bottom: 30px;
}

.ast-section {
  padding-top: 30px
}

.ast-sub-question {
  margin-top: 10px
}

.li-active {
  color: #f05b27
}

.know-more-text {
  font-size: 24px;
  font-family: neosans;
  color: #b1cab8
}

.ast-nav li {
  font-size: 24px;
  font-family: neosans;
  color: #939597
}

.ast-nav li a {
padding: 5px 15px!important;
height: 40px;
line-height: 35px;
}

.ast-nav li:hover {
  background-color: #f0fbf2!important;
  border-radius: 5px
}

.ast-nav {
  z-index: -1
}


/* END OF KNOW MORE PAGE */

@media (min-width: 768px) {
    .dropdown-menu>li>a:hover,.dropdown-menu>li>a:focus {
        background-color: transparent !important;
        color: #fff;
    }

    #resource-dropdown .active {
        color: #fff !important;
        transition: all .35s ease-out;
    }

    .navbar-nav>li>.dropdown-menu {
        position: fixed;
        text-align: center;
        width: 100%;
        background: #454545;
    }

    #ak-menu {
        float: right;
        margin-right: 130px;
    }

    .dropdown-menu>li {
        display: inline-block;
    }

    .dropdown-menu>li>a {
        color: #999;
    }

    .navbar-nav>li>a {
        text-shadow: none;
        color: #000;
        margin-top: 10px;
    }

    .nav>li>a:hover,.nav .open>a:hover,.nav .open>a:focus {
        background: none;
    }

    a:focus {
        background: none !important;
    }/*#ak-header{
        border-bottom: 1px solid #E9E9E9;
      }*/

}

@media (max-width: 990px) {

    .navbar-nav {
        margin-left: 4%;
    }
    .year-menu{
      margin-left: 30px;
    }
    .mentions-text{
      text-align: left!important;
      margin-left: 50px;
    }
    .banner-main-section{
      margin-top: 0px!important;
    }
    .banner-top img{
      display: none!important;
    }


  #ak-menu {
    margin-right: 100px!important;
    float: left;
  }
  .request-menu{
    margin-right: 40px;
  }


}
/* ... */

